# anops

./: .pre-commit-config.yaml  .repomixignore  ACTIONPLAN.md  CONTRIBUTING.md  Cargo.toml  README.md  ao.toml  before-production.md  cargo-errors  docker-compose.yml  entire-codebase.xml  repomix.config.json
ao-cli/: .gitignore  ACTIONPLAN.md  Cargo.toml
ao-cli/src/: build.rs  check.rs  config.rs  init.rs  lib.rs  main.rs  run.rs  utils.rs
api-service/: .pytest.ini  Dockerfile  README.md  anops_pb2.py  anops_pb2.pyi  anops_pb2_grpc.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api-service/tests/: test_main.py
model-interface/: README.md  anops.proto
model-service/: Dockerfile  README.md  requirements-dev.txt  requirements.txt  server.py
model-service/tests/: test_server.py
src/: check.rs  config.rs  init.rs  lib.rs  main.rs  run.rs
src/opts/: language.rs
tests/: test_e2e.py
