[package]
name = "ao"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
shlex = "1.1"

[dev-dependencies]
tempfile = "3.10"